[gd_scene load_steps=12 format=3 uid="uid://bc08gr3ma0glj"]

[ext_resource type="Script" path="res://bitFolder/side_character.gd" id="1_mqv33"]
[ext_resource type="Texture2D" uid="uid://bqhf0l6c1x4m2" path="res://bitFolder/Assets/1bitDungeon/player_new.png" id="1_ya5go"]
[ext_resource type="Texture2D" uid="uid://xskh8swdo8m" path="res://bitFolder/Assets/1bitDungeon/Gun.png" id="2_qgnys"]
[ext_resource type="AudioStream" uid="uid://rts7jyhef0a1" path="res://bitFolder/sounds/Retro FootStep Mud_6.wav" id="4_ocbms"]
[ext_resource type="AudioStream" uid="uid://bacv0pg6d1id0" path="res://bitFolder/sounds/Retro FootStep Krushed Landing 01.wav" id="5_bdm6w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t0jxo"]
radius = 5.0
height = 18.0

[sub_resource type="Animation" id="Animation_ups73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rqvgj"]
resource_name = "hit"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_s4h0m"]
resource_name = "idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_nfuab"]
resource_name = "run"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iv0k3"]
_data = {
"RESET": SubResource("Animation_ups73"),
"hit": SubResource("Animation_rqvgj"),
"idle": SubResource("Animation_s4h0m"),
"run": SubResource("Animation_nfuab")
}

[node name="SideCharacter" type="CharacterBody2D"]
collision_mask = 5
script = ExtResource("1_mqv33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_t0jxo")

[node name="Gun" type="Sprite2D" parent="."]
position = Vector2(12, -6)
texture = ExtResource("2_qgnys")

[node name="Marker2D" type="Marker2D" parent="Gun"]
position = Vector2(7, -1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_ya5go")
hframes = 7
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iv0k3")
}
autoplay = "idle"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="RunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ocbms")
volume_db = -10.0
pitch_scale = 0.8
autoplay = true

[node name="Landing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bdm6w")
volume_db = -10.0

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
